app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: url-shortener-deployment
  labels: 
    app: url-shortener
spec:
  replicas: 1
  selector:
    matchLabels:
      app: url-shortener
  template:
    metadata:
      labels:
        app: url-shortener
    spec:
      containers:
        - name: url-shortener
          image: docker.io/library/url_shortener:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
